--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_2"></h3>
                         <p class="author lead">Album by <span id="album_title_2"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_2"></span></p>
+                        <p class="author">Artist : <span id="artist_name_2"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_2">Get Lyrics</button>
@@ -86,7 +86,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_3"></h3>
                         <p class="author lead">Album by <span id="album_title_3"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_3"></span></p>
+                        <p class="author">Artist : <span id="artist_name_3"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_3">Get Lyrics</button>
@@ -99,7 +99,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_4"></h3>
                         <p class="author lead">Album by <span id="album_title_4"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_4"></span></p>
+                        <p class="author">Artist : <span id="artist_name_4"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_4">Get Lyrics</button>
@@ -112,7 +112,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_5"></h3>
                         <p class="author lead">Album by <span id="album_title_5"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_5"></span></p>
+                        <p class="author">Artist : <span id="artist_name_5"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_5">Get Lyrics</button>
@@ -125,7 +125,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_6"></h3>
                         <p class="author lead">Album by <span id="album_title_6"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_6"></span></p>
+                        <p class="author">Artist : <span id="artist_name_6"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_6">Get Lyrics</button>
@@ -138,7 +138,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_7"></h3>
                         <p class="author lead">Album by <span id="album_title_7"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_7"></span></p>
+                        <p class="author">Artist : <span id="artist_name_7"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_7">Get Lyrics</button>
@@ -151,7 +151,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_8"></h3>
                         <p class="author lead">Album by <span id="album_title_8"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_8"></span></p>
+                        <p class="author">Artist : <span id="artist_name_8"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_8">Get Lyrics</button>
@@ -164,7 +164,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_9"></h3>
                         <p class="author lead">Album by <span id="album_title_9"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_9"></span></p>
+                        <p class="author">Artist : <span id="artist_name_9"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_9">Get Lyrics</button>
@@ -177,7 +177,7 @@
                     <div class="col-md-7">
                         <h3 class="lyrics-name" id="lyrics_title_10"></h3>
                         <p class="author lead">Album by <span id="album_title_10"></span></p>
-                        <p class="author lead">Artist : <span id="artist_name_10"></span></p>
+                        <p class="author">Artist : <span id="artist_name_10"></span></p>
                     </div>
                     <div class="col-md-3 text-md-right text-center">
                         <button class="btn btn-success" id="get_song_lyrics_10">Get Lyrics</button>
@@ -211,8 +211,11 @@
                 .then(res => res.json())
                 .then(data => {
                     
-                    document.getElementById('search_result_list').style.display = 'block'; 
+                    document.getElementById('song_title').innerText = ''; 
+                    document.getElementById('song_lyric').innerText = ''; 
                     document.getElementById('lyric_section').style.display = 'none'; 
+                    document.getElementById('search_result_list').style.display = 'block'; 
+                    
                     for(let i =0; i< 10; i++)
                     {
                         var id = i+1; 
